chore: more adjustments
